<resources>
    <string name="app_name">texting</string>
    <string name="todo">TODO</string>
    <string name="hint">hint</string>
    <string name="enter_message">Enter Message</string>
    <string name="textview">TextView</string>
    <string name="delete_message">Delete Message</string>
    <string name="phone_manufacturer">phone manufacturer</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="manufacturer_sub">manufactorer</string>
    <string name="model">Model</string>
    <string name="model_sub">model</string>
    <string name="content">Content</string>
    <string name="conent_sub">content</string>
    <string name="timestamp">Time</string>
    <string name="timestamp_default">%%time</string>
    <string name="title_activity_login">User sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username</string>
    <string name="some_avatar_to_look_at">Some avatar to look at</string>
    <string name="this_is_my_app">This is my app</string>
    <string name="skip">Skip</string>
    <string name="continue_b">Continue</string>
    <string name="welcome_user">Welcome User!</string>

</resources>
