<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/none"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".ViewMessage">

    <Button
        android:id="@+id/delete_message"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
        android:text="@string/delete_message"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_manufacturer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:contentDescription="@string/phone_manufacturer"
        android:text="@string/manufacturer"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_message" />

    <TextView
        android:id="@+id/view_manufacturer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:text="@string/manufacturer_sub"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintStart_toEndOf="@+id/title_manufacturer"
        app:layout_constraintTop_toBottomOf="@+id/delete_message" />

    <TextView
        android:id="@+id/title_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/model"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_manufacturer" />

    <TextView
        android:id="@+id/view_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16dp"
        android:text="@string/model_sub"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintStart_toEndOf="@+id/title_model"
        app:layout_constraintTop_toBottomOf="@+id/view_manufacturer" />

    <TextView
        android:id="@+id/title_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_model" />

    <TextView
        android:id="@+id/view_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:text="@string/conent_sub"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintStart_toEndOf="@+id/title_content"
        app:layout_constraintTop_toBottomOf="@+id/view_model" />

    <TextView
        android:id="@+id/title_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/timestamp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_content" />

    <TextView
        android:id="@+id/view_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:text="@string/timestamp_default"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintStart_toEndOf="@+id/title_content"
        app:layout_constraintTop_toBottomOf="@+id/view_content" />


</androidx.constraintlayout.widget.ConstraintLayout>